--- a/limits-service.properties
+++ b/limits-service.properties
@@ -1,4 +1,4 @@
-spring.config.import=optional:configserver:http://localhost:8888
+#spring.config.import=optional:configserver:http://localhost:8888
 spring.devtools.restart.enabled=true
 limits-service.minimum=7
 limits-service.maximum=27
